# shadow

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml
src/: bootstrap.rs  main.rs  router.rs
src/common/: mod.rs  response.rs
src/core/: bootstrap.rs  mod.rs  root.rs  router.rs
src/middleware/: cors.rs  mod.rs
src/modules/: mod.rs
src/modules/configs/: endpoints.rs  error.rs  mod.rs  setup.rs  sqlite.rs  value.rs
src/modules/site/: inception.rs  metadata.rs  mod.rs  navigation.rs  owner.rs  requirement.rs
