[package]
name = "shadow"
version = "1.4.2"
edition = "2024"
description = "Shadow – A quiet Rust backend, serving Sora’s world."
license = "AGPL-3.0"
repository = "https://github.com/canmi21/shadow"
readme = "README.md"
keywords = ["network", "server", "web", "shadow"]
categories = ["network-programming", "web-programming", "development-tools"]

[[bin]]
name = "shadow"
path = "src/main.rs"

[dependencies]
dotenvy = "0.15"
fancy-log = "0.1"
lazy-motd = "1"
anynet = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
tower-http = { version = "0.6", features = ["cors"] }
base64 = "0.22"

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }